--- a/style.css
+++ b/style.css
@@ -1,3 +1,84 @@
 *, *::after, *::before {
     box-sizing: border-box;
 }
+
+body {
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.generator {
+    background-color: #006699;
+    padding: 3rem;
+    color: white;
+    border: 2px solid black;
+    border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#form {
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 1rem;
+    column-gap: 3rem;
+    justify-content: center;
+    align-items: center;
+}
+
+#password {
+    width: 350px;
+    padding: 1rem;
+    border: 2px solid black;
+    border-radius: .5rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 2rem 0;
+    color: black;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    word-break: break-all;
+}
+
+#submit {
+    grid-column: span 2;
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+    padding: .5rem 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 1rem;
+}
+
+#submit:hover {
+    background-color: #FFFFFF33;
+}
+
+h1 {
+    margin: 0;
+    text-align: center;
+}
+
+label {
+    font-weight: bold;
+}
+
+.character-container {
+    display: flex;
+    align-items: center;
+}
+
+#characterAmountNumber {
+    width: 2.5rem;
+}
